@@ -1,5 +1,5 @@
 /*
- * Copyright © 2017-2022 Dominic Heutelbeck (dominic@heutelbeck.com)
+ * Copyright © 2023 Dominic Heutelbeck (dominic@heutelbeck.com)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -83,7 +83,7 @@ class CoverageHitAPIFile implements CoverageHitRecorder, CoverageHitReader {
 	}
 
 	private void appendLineToFile(Path filePathPolicySetHits, String lineToAdd) throws IOException {
-		Files.write(filePathPolicySetHits, (lineToAdd + System.lineSeparator()).getBytes(StandardCharsets.UTF_8),
+		Files.writeString(filePathPolicySetHits, lineToAdd + System.lineSeparator(),
 				StandardOpenOption.APPEND);
 	}
 
